# VacuumMetrProj

./: .gitignore  .gitmodules  Backup of VacuumMetrProj.ewd  Backup of VacuumMetrProj.ewp  Backup of VacuumMetrProj.ewt  BoardConfig.c  BoardConfig.h  CMakeLists.txt  CMakePresets.json  README.md  VacuumMetrProj.code-workspace  VacuumMetrProj.dep  VacuumMetrProj.ewd  VacuumMetrProj.ewp  VacuumMetrProj.ewt  VacuumMetrProj.eww  main.c  main.h
.github/workflows/: build.yml
CMSIS/: CMakeLists.txt  startup_stm32f103xb.s  system_stm32f1xx.c
CMSIS/GCC/: startup_stm32f103xb.s
CMSIS/IAR/: startup_stm32f103xb.s
Debug/: .ninja_deps  .ninja_log
Debug/BrowseInfo/: .ninja_log  VacuumMetrProj.pbd  VacuumMetrProj.pbd.browse  VacuumMetrProj_part0.pbi  VacuumMetrProj_part1.pbi  VacuumMetrProj_part2.pbi  VacuumMetrProj_part3.pbi  VacuumMetrProj_part4.pbi  build.ninja
Debug/BrowseInfo/CMSIS/: system_stm32f1xx.pbi  system_stm32f1xx.pbi.dep  system_stm32f1xx.xcl
Debug/BrowseInfo/FreeRTOS/: croutine.pbi  croutine.pbi.dep  croutine.xcl  list.pbi  list.pbi.dep  list.xcl  queue.pbi  queue.pbi.dep  queue.xcl  tasks.pbi  tasks.pbi.dep  tasks.xcl
Debug/BrowseInfo/User/: BoardConfig.pbi  BoardConfig.pbi.dep  BoardConfig.xcl  build.pbi.dep  build.xcl  main.pbi  main.pbi.dep  main.xcl
Debug/Exe/: VacuumMetrProj.out  VacuumMetrProj.sim
Debug/List/: VacuumMetrProj.map
Games/: Snake.c  Snake.h  Tetris.c  Tetris.h
Project/: VacuumMetrProj.ewd  VacuumMetrProj.ewp  main.c  main.h
Release/: .ninja_deps  .ninja_log
Release/BrowseInfo/: .ninja_log  VacuumMetrProj.pbd  VacuumMetrProj_part0.pbi  VacuumMetrProj_part1.pbi  VacuumMetrProj_part2.pbi  VacuumMetrProj_part3.pbi  VacuumMetrProj_part4.pbi  VacuumMetrProj_part5.pbi  build.ninja
Tasks/: Buttons_Task.c  Buttons_Task.h  DISP_Task.c  DISP_Task.h  LASTLEVELMENU_Menu_Task.c  LASTLEVELMENU_Menu_Task.h  LASTLEVELMENU_Task.c  LASTLEVELMENU_Task.h  LCD_Task.h  METER_Task.c  METER_Task.h  Menu_Task.c  Menu_Task.h  SCOPE_Task.c  SCOPE_Task.h
Utilities/FreeRTOS/Source/: CMakeLists.txt
build_number/: build.c  build.h  versionfile-gen.vbs
cmake/: arm-none-eabi.cmake
libs/: ADC.c  ADC.h  BoardConfig.c  BoardConfig.h  Buttons.c  Buttons.h  Configuration.c  Configuration.h  DISP_Buff.c  DISP_Buff.h  FreeRTOSConfig.h  METER_Task.c  METER_Task.h  Menu.c  Menu.h  TaskPriority.h  VacuumMetrProj.icf  VacuumMetrProj.ld  Version.h  delay.c  lcd5110.c  lcd5110.h  stm32f1xx_it.c  stm32f1xx_it.h
settings/: VacuumMetrProj.Debug.cspy.bat  VacuumMetrProj.Debug.cspy.ps1  VacuumMetrProj.Debug.driver.xcl  VacuumMetrProj.Debug.general.xcl  VacuumMetrProj.Release.cspy.bat  VacuumMetrProj.Release.cspy.ps1  VacuumMetrProj.Release.general.xcl  VacuumMetrProj.dbgdt  VacuumMetrProj.dnx  VacuumMetrProj.wsdt  VacuumMetrProj_EncodingOverride.xml
(+123 files in other folders)
